# SatCity

./: .gitignore  E2E-FLOW-LOGIC.md  README.md  SATCITY.md
circuits/: Scarb.toml  program_inputs.json
circuits/src/: lib.cairo  state.cairo
circuits/src/rules/: balance.cairo  item.cairo
contracts/: Cargo.toml  ESSENTIAL_ALKANES_CONTRACTS_CHEATSHEET.md  README.md  build.rs
contracts/alkanes/game-escrow/: Cargo.toml  GAME_ESCROW.md  README.md
contracts/alkanes/game-escrow/src/: lib.rs
contracts/alkanes/verifier/: Cargo.toml  README.md
contracts/alkanes/verifier/src/: lib.rs
contracts/src/: lib.rs
sequencer/: Cargo.toml  build.rs
sequencer/src/: helpers.rs  main.rs  mempool.rs  prover.rs  rpc.rs  state.rs
