[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs_merkle = "1.2.0"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm/", package = "cairo-vm", branch = "main"}
cairo1_run = { git = "https://github.com/lambdaclass/cairo-vm/", package = "cairo1-run", branch = "main"}
cairo-lang-sierra = { version = "2.12.0-dev.0", default-features = false }
ethnum = "1.5.2"
hex = "0.4.3"
num-traits = "0.2.19"


[build-dependencies]
serde_json = "1.0"
