[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs_merkle = "1.2.0"
cairo-lang-casm = { version = "2.11.4", default-features = false }
cairo-lang-sierra = { version = "2.11.4", default-features = false }
cairo-vm = { git = "https://github.com/Sprimage/cairo-vm" }
cairo1-run = { git = "https://github.com/Sprimage/cairo-vm" }
ethnum = "1.5.2"
hex = "0.4.3"
num-traits = "0.2.19"
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a", features = [
    "std",
] }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
cairo-prove = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
cairo-air ={ git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }


[build-dependencies]
serde_json = "1.0"
