[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-sierra = { version = "2.12.0-dev.0" }
cairo-lang-casm = { version = "2.12.0-dev.0" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs_merkle = "1.2.0"
ethnum = "1.5.2"
hex = "0.4.3"
num-traits = "0.2.19"
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a", features = [
    "std",
] }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
cairo-prove = { git = "https://github.com/starkware-libs/stwo-cairo" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm/", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673", features = [
    "mod_builtin",
], default-features = false }
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm/", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673"}
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
sonic-rs = { version = "0.3.17" }
starknet-ff = "0.3.7"


[build-dependencies]
serde_json = "1.0"


[patch.crates-io]
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo.git", rev = "5cc466a" }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo.git", rev = "5cc466a" }

