[package]
name = "game-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
alkanes-macros = { workspace = true }
metashrew-support = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
alkanes = { workspace = true }
metashrew-core = { workspace = true }
protorune = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
hex_lit = { workspace = true }